# digitalcheck-dito

./: .env.example  .env.test  .eslintrc.cjs  .gitignore  .sonarcloud.properties  .talismanrc  Dockerfile  README.md  astro.config.mjs  docker-compose.yml  eslint.config.js  eslint.config.mjs  lefthook.yml  nginx.conf  nginx.template.conf  opencode.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  react-router-preview.config.ts  react-router.config.ts  run.sh  security.txt  tailwind.config.js  tsconfig.app.json  tsconfig.base.json  tsconfig.browser-test.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
.github/: dependabot.yml
app/: entry.client.tsx  entry.server.spec.ts  entry.server.tsx  root.tsx  routes.ts  styles.css  vite-env.d.ts
assets/: Absatz-BcMCUlvQ.js  Absatz-Bwd2kRfJ.js  Absatz-CB8F9_eZ.js  Absatz-C_npIGmK.js  Absatz-Ca_xjv6r.js  Absatz-Ccyk_VIJ.js  Absatz-ChVSCZmO.js  Absatz-CoXrGscY.js  Absatz-D8XS3Xkj.js  Absatz-kJ6D25VG.js  AccordionItem-B1oO_mKa.js  AccordionItem-BRIuMqHo.js  AccordionItem-BcUIQuSt.js  AccordionItem-C9MH9mYZ.js  AccordionItem-CZCkVQex.js  AccordionItem-CsTz0Z41.js  AccordionItem-ej-rKl-F.js  ArrowCircleRightOutlined-BEGmAlGf.js  Badge-9jykob6K.js  Badge-B53gh_4N.js  Badge-Bfg24ddS.js  Badge-C57R2p2D.js  Badge-CeLEjj9m.js  Badge-DPt5DD0C.js  Badge-Df706xH5.js  Badge-DtcP_MYO.js  BlocksRenderer-BcIeKM0M.js  BlocksRenderer-BsZwUd8Z.js  BlocksRenderer-CvT6Us2C.js  (+1560 more)
scripts/nkr-data/: .env.example  pyproject.toml  transform-nkr-export.ipynb
(+5595 files in other folders)
